change about header

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About
-header-img: "img/about-bg.png"
+header-img: "img/about-header.png"
 ---
 
 <p>A woman's journey to making an impact in the tech industry. </p>
