--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ header-img: "img/about-header.png"
 ---
 
 
-<p>I have a profound interest in Web Development and I’m trying to equip myself with the skills that will help me pursue a career in the field. Software and or Web development has piqued my interest and motivated me to explore it further. In the pursuit to improve my skills and broaden my understanding of Web Development, I have completed an online web development bootcamp through Flatiron School and laid a rather strong foundation. I have worked on some projects in the domain of basic web applications, where I used various frameworks. Programming is my passion, and I intend to work in the area at every opportunity. I am enthralled by the impact that Techonology can have on our society, and the pace at which we are moving, I’m excited to see what comes next.
+<p>I have a profound interest in Web Development and I’m trying to equip myself with the skills that will help me pursue a career in the field. Software and or Web development has piqued my interest and motivated me to explore it further. In the pursuit to improve my skills and broaden my understanding of Web Development, I am working through an online web development bootcamp through Flatiron School and laid a rather strong foundation. I have worked on some projects in the domain of basic web applications, where I used various frameworks. Programming is my passion, and I intend to work in the area at every opportunity. I am enthralled by the impact that Techonology can have on our society, and the pace at which we are moving, I’m excited to see what comes next.
 
 
 
