--- a/about.html
+++ b/about.html
@@ -10,4 +10,4 @@ header-img: "img/about-header.png"
 
 
 
-<p>A woman's journey to making an impact in the tech industry. </p>
+<p>Check out the source code to recent projects that I have built, by clicking on the Github link below.  </p>
