--- a/about.html
+++ b/about.html
@@ -5,7 +5,13 @@ header-img: "img/about-header.png"
 ---
 
 
-<p>I have a profound interest in Web Development and I’m trying to equip myself with the skills that will help me pursue a career in the field. Software and or Web development has piqued my interest and motivated me to explore it further. In the pursuit to improve my skills and broaden my understanding of Web Development, I am working through an online web development bootcamp through Flatiron School and it has laid a rather strong foundation. I have worked on some projects in the domain of basic web applications, where I used various frameworks using the Ruby programming language. Programming is my passion, and I intend to work in the area at every opportunity. I am enthralled by the impact that Techonology can have on our society, and the pace at which we are moving, I’m excited to see what comes next.
+<p>For as long as I can remember I wanted to build things, but not just anything, things that would make people happy, so I could be responsible for a little piece of joy in their lives. I didn’t know what I would build or how I would do it, but one day my uncle, who was an architect, showed me a program called AutoCad. There was a problem and he fixed it, by going into the source code. It was like a whole new world opened up to me and I was hooked. My friends thought it was weird when I would always look at the source code on the websites I visited, but I felt fascinated.
+
+That deep fascination led me to enroll in the coding bootcamp through Flatiron, I wanted to broaden my understand of web and software development so that I could create amazing infrastructure behind AutoCad, MacOS, Windows or Facebook.  At Flatiron, I worked on web applications that were both task-based and CLI.  I completed all of these using the Ruby programming language, of which, I have become quite fluent.
+
+Programming is my passion and I intend to work in field for the rest of my career. I am enthralled with the impact that stringing little lines of code together can have on our ever emerging technology and, thus, the future of our society. I can’t wait to see what comes next!
+
+-Jen
 
 
 
